# job--sprint

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_schedule.md  SECURITY.md  login.html  no-profile-fallback.html  package.json  schedule.html  sw.js
apps/rust-api/: Cargo.toml  README.md
apps/rust-api/migrations/: 001_init.sql
apps/rust-api/src/: ai_routes.rs  ai_tools.rs  ai_transcribe.rs  app_bootstrap.rs  app_schema.rs  app_schema_boundary_feedback.rs  application_routes.rs  auth_account_actions.rs  auth_account_audit.rs  auth_account_batch_actions.rs  auth_account_store.rs  auth_account_users_file.rs  auth_bearer.rs  auth_config.rs  auth_hash.rs  auth_http.rs  auth_permissions.rs  auth_routes.rs  auth_state.rs  auth_tokens.rs  auth_users.rs  auth_values.rs  coach_ai_metadata.rs  coach_ai_provider.rs  coach_ai_provider_format.rs  coach_ai_tools.rs  coach_ai_tools_tests.rs  coach_boundary_feedback.rs  coach_boundary_feedback_summary.rs  coach_boundary_provider.rs  coach_boundary_routes.rs  coach_boundary_suggestions.rs  coach_invitation_action_routes.rs  coach_invitation_import_routes.rs  coach_invitation_notifications.rs  coach_invitation_routes.rs  coach_invitations.rs  coach_jd_insights.rs  coach_onboarding_event_summary.rs  coach_onboarding_events.rs  (+23 more)
apps/rust-api/src/coach_outcomes/: metrics.rs  narrative.rs  report.rs  window.rs
apps/rust-api/tests/: boundary_provider_contract.rs  runtime_contract.rs
apps/rust-api/tests/runtime_contract/: boundary_feedback.rs  coach_onboarding.rs  invitation_account.rs  (+3 more)
(+419 files in other folders)
